--- a/registrationform.html
+++ b/registrationform.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration form</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body><form>
     <table>
@@ -14,7 +15,7 @@
         </tr>
         <tr>
             <td>
-                Password : 
+                password :
             </td>
             <td>
                 <input type="password"placeholder="password" name="">
